# codex-lark-minimal

./: .gitignore  AGENTS.md  INSTALL_WITH_AGENT.md  LICENSE  Makefile  README.md  SECURITY.md  config.env.example  install.sh  pyproject.toml
.github/workflows/: test.yml
skills/codex-lark-design/: SKILL.md
skills/codex-lark-review/: SKILL.md
src/codex_lark_minimal/: __init__.py  bridge.py  cli.py  codex.py  commands.py  config.py  doctor.py  feishu.py  redaction.py  setup.py  state.py  worker.py
tests/: test_bridge.py  test_codex.py  test_commands.py  test_config.py  test_redaction.py  test_state.py  test_worker.py
